# ComfyUI-IPAdapter-FluxChroma

./: .gitignore  README.md  attention_processor.py  attention_processor_advanced.py  ipadapter_flux.py  ipadapter_flux_advanced.py  pyproject.toml  utils.py
documentation/: CHROMA_COMPATIBILITY_CHANGES.md  COMFY_MEMORY_MANAGEMENT_FIX.md  FORK_COMPARISON.md
flux/: layers.py  math.py
