[project]
name = "comfyui-ipadapter-fluxchroma"
description = "nodes for flux ipadapter released by shakker-labs, chroma fork by tk3r"
version = "1.0.0"
license = {file = "LICENSE"}
dependencies = ["einops==0.8.0", "transformers>=4.37.2", "diffusers", "sentencepiece>=0.2.0", "protobuf>=4.25.5"]

[project.urls]
Repository = "https://github.com/TK3R/ComfyUI-IPAdapter-FluxChroma"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = "tk3r"
DisplayName = "ComfyUI-IPAdapter-FluxChroma"
Icon = ""